src/frontend/css/style.css
@import "https://fonts.googleapis.com/css?family=Lato:300";
@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css";

{ box-sizing: border-box; }

body {
	/* font-family: 'Open Sans', sans-serif; */
	font-family: "Lato", "FontAwesome", sans-serif;
	background-color: #fefefe;
	margin: 0;
}

main {
	margin: 0 auto;
	text-align: center;
}

#load {
  left: 50%;
  overflow: hidden;
  padding: 10px 0;
  position: absolute;
  top: 70%;
  transform: translate(-50%);
  width: 150px;
	visibility: hidden;
}
#load .ball {
  background: #3e92c8;
  border-radius: 5px;
  display: block;
  height: 10px;
  left: 15px;
  position: absolute;
  top: 5px;
  width: 10px;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: along;
  -webkit-animation-timing-function: linear;
}
#load .ball2 {
  background: #508EC3;
  border-radius: 5px;
  display: block;
  height: 10px;
  left: 15px;
  position: absolute;
  top: 5px;
  width: 10px;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: along;
  -webkit-animation-timing-function: linear;
  -webkit-animation-delay: -1s;
}
#load ul {
  margin: 0;
  padding: 0;
}
#load li {
  background-color: #2b72a6;
  border-radius: 5px;
  display: inline-block;
  margin: 0;
  height: 10px;
  width: 30px;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: around;
  -webkit-animation-timing-function: linear;
}
#load li:nth-child(1) {
  -webkit-animation-delay: 0s;
}
#load li:nth-child(2) {
  background-color: #1d5686;
  -webkit-animation-delay: 0.2s;
}
#load li:nth-child(3) {
  background-color: #12406b;
  -webkit-animation-delay: 0.4s;
}
#load li:nth-child(4) {
  background-color: #0a3056;
  -webkit-animation-delay: 0.6s;
}
#load li:nth-child(5) {
  background-color: #052140;
  -webkit-animation-delay: 0.8s;
}
@-webkit-keyframes around {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
  }
}
@-webkit-keyframes along {
  0% {
    left: 0;
    top: 5px;
  }
  5% {
    top: 3px;
  }
  10% {
    top: 5px;
  }
  15% {
    top: 3px;
  }
  20% {
    top: 5px;
  }
  25% {
    top: 3px;
  }
  30% {
    top: 5px;
  }
  35% {
    top: 3px;
  }
  40% {
    top: 5px;
  }
  45% {
    top: 3px;
  }
  50% {
    left: 100%;
    top: 5px;
  }
  100% {
    left: 100%;
  }
}

body {
	font-size: 1.5em;
}

h1 {
	cursor: pointer;
  margin: auto 0;
	max-width: 100%;
	text-align: center;
}

/* form  */
.form {
  margin: auto 15%;
	max-width: 70%;
	padding: 5px;
}

.form input[type=text]{
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

.form textarea{
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}
.form textarea:disabled {
  background-color: #CFD8DC;
}

.form input[type=submit] {
  width: 100%;
	font-size: 1em;
  background-color: #263238;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  border-radius: 4px;
  cursor: pointer;
	visibility: visible;
}

.form input[type=checkbox] {
  position: absolute;
  z-index: -1;
  opacity: 0;
  margin: 10px 0 0 20px;
}
.form input[type=checkbox] + label {
  position: relative;
  padding: 0 0 0 60px;
  cursor: pointer;
}
.form input[type=checkbox] + label:before {
  content: '';
  position: absolute;
  top: 2px;
  left: 0;
  width: 50px;
  height: 26px;
  border-radius: 13px;
  background: #CDD1DA;
  box-shadow: inset 0 2px 3px rgba(0,0,0,.2);
  transition: .2s;
}
.form input[type=checkbox] + label:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 2px;
  width: 22px;
  height: 22px;
  border-radius: 10px;
  background: #FFF;
  box-shadow: 0 2px 5px rgba(0,0,0,.3);
  transition: .2s;
}
.form input[type=checkbox]:checked + label:before {
  background: #555555;
}
.form input[type=checkbox]:checked + label:after {
  left: 26px;
}
.form input[type=checkbox]:focus + label:before {
  box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(255,255,0,.7);
}

.error-message {
  /* margin-top: 8px; */
  color: #B94A48;
}

.question_page {
	display: none;
}

.answer_page {
	/* display: none	; */
}

.question_answer_page {
  margin: auto 15%;
	max-width: 70%;
	padding: 5px;
	/* display: none; */
}
.question_answer_page p{
	font-size: 1.1em;
	padding: 5px;
  width: 100%;
  padding: 12px 20px;
  /* display: inline-block; */
}

.legend {
	margin: auto 15%;
	width: 70%;
	padding: 5px 2%;
	font-size: 0.7em;
	border: 1px solid #ccc;
  border-radius: 10px;
  box-sizing: border-box;
	display: inline-block;
	background-color: #f5f5f5;
}
.legend_answer {
	width: 15px;
	height: 15px;
	border: 1px solid #ccc;
  box-sizing: border-box;
	display: inline-block;
	background-color: #F9E270;
}
.legend_panswer {
	width: 15px;
	height: 15px;
	border: 1px solid #ccc;
  box-sizing: border-box;
	display: inline-block;
	background-color: #54ee93;
}
.legend_cross {
	width: 15px;
	height: 15px;
	border: 1px solid #ccc;
  box-sizing: border-box;
	display: inline-block;
	background-color: #3FB856;
}

.answer_block {
	margin: 15px 15%;
	margin-top: 0;
	max-width: 70%;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

.answer_score {
	/* margin: 0; */
	padding-top: 0;
	background-color: #dddddd;
}
.answer_score p{
	margin: 0;
	padding: 10px 15px;
	background-color: #dddddd;
}

.context_answer_page {
	/* margin: 0; */
	/* display: none; */
	background-color: #f5f5f5;
	padding: 15px 20px;
}

.context_answer_page p{
	max-height: 10em;
	overflow-y: scroll;
	margin: 0;
  width: 100%;
  /* padding: 5px; */
	background-color: #f5f5f5;
}

.mark_answer {
	background-color: #F9E270;
}
.mark_panswer {
	background-color: #54ee93;
}
.mark_cross {
	background-color: #3FB856;
}

